fix: align buttons nicely

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@
 
 body{
 	background: #0d0e2b;
+	width: 1280px;
 }
 
 .keyboard-wrapper {
@@ -69,17 +70,16 @@ body{
 	font-family: sans-serif;
 	font-size: 20px;
 	font-weight: 500;
-	line-height: 60px;
+	line-height: 52px;
 	text-align: center;
 	cursor: pointer;
 	user-select: none;
 	display: block;
-	width: 60px;
-	height: 60px;
+	width: 50px;
+	height: 50px;
 	color:  #fff;
 	background: #357DED;
-	margin: 6px;
-	float: left;
+	margin: 5px;
 	box-shadow: 5px 4px 0px #8c8fe6, inset 6px 5px 10px #1a1e77;
 	border-radius: 9px;
 	border: 2px solid transparent;
